--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-h2 {
-    padding-top: 2cm;
-}
-
 ul {
     list-style: none;
 }
@@ -43,4 +39,39 @@ body {
 	height:100%;
 	width:2%;
 	background: linear-gradient(to left, #555588, #444444);
+}
+
+
+.sidenav {
+    top:100px;
+    width: 16%;
+    position: fixed;
+    z-index: 1;
+    left: 2%;
+    background: #eee;
+    overflow-x: hidden;
+    padding: 8px 0;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #2196F3;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #064579;
+}
+
+.main {
+    margin-left: 140px; /* Same width as the sidebar + left position in px */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
