Attempted mobile fix

--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,10 @@ body {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+
+@media screen and (max-height:450px){
+    .rightsidebar {width:0;}
+    .rightshadow {width:0;}
+    .leftsidebar {width:0;}
+    .leftshadow {width:0;}
+}
