--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ div card {
 }
 
 body {
-    background-color:aaaaff;
+    background-color:4c4ca6;
     margin: 0;
     padding-left: 0%;
     padding-right: 0%;
@@ -25,7 +25,7 @@ body {
 
 .topnav a {
   float: left;
-  color: #5555aa;
+  color: #4c4ca6;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -33,7 +33,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #5555aa;
+  background-color: #4c4ca6;
   color: white;
 }
 
@@ -44,7 +44,7 @@ body {
 
 .side-padding {
     background-color:#ffffff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.59);
     padding-left:20px;
     padding-right:20px;
 }
@@ -54,13 +54,13 @@ body {
 }
 
 .aligning {
-    background-color:#aaaaff;
+    background-color:#4c4ca6;
     padding-left:20%;
     padding-right:20%;
     padding-top:20px;
     padding-bottom:20px;
 }
 
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 400px) {
     .aligning {padding-left: 0px; padding-right:0px;}
 }
