--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ div card {
 }
 
 body {
-    background-color:4c4ca6;
+    background-color:000080;
     margin: 0;
     padding-left: 0%;
     padding-right: 0%;
@@ -20,12 +20,12 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #cccccc;
+  background-color: #eeeeee;
 }
 
 .topnav a {
   float: left;
-  color: #4c4ca6;
+  color: #000080;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -33,7 +33,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #4c4ca6;
+  background-color: #000080;
   color: white;
 }
 
@@ -54,13 +54,13 @@ body {
 }
 
 .aligning {
-    background-color:#4c4ca6;
+    background-color:#000080;
     padding-left:20%;
     padding-right:20%;
     padding-top:20px;
     padding-bottom:20px;
 }
 
-@media screen and (max-width: 400px) {
+@media all and (max-width: 600px) {
     .aligning {padding-left: 0px; padding-right:0px;}
 }
