--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ div card {
 }
 
 body {
-    background-color:000080;
+    background-color:1d2088;
     margin: 0;
     padding-left: 0%;
     padding-right: 0%;
@@ -25,7 +25,7 @@ body {
 
 .topnav a {
   float: left;
-  color: #000080;
+  color: #000000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -33,7 +33,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #000080;
+  background-color: #1d2088;
   color: white;
 }
 
@@ -54,13 +54,13 @@ body {
 }
 
 .aligning {
-    background-color:#000080;
+    background-color:#1d2088;
     padding-left:20%;
     padding-right:20%;
     padding-top:20px;
     padding-bottom:20px;
 }
 
-@media all and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
     .aligning {padding-left: 0px; padding-right:0px;}
 }
