--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ div card {
 }
 
 body {
-    background-color:1d2088;
+    background-color:6565cc;
     margin: 0;
     padding-left: 0%;
     padding-right: 0%;
@@ -33,7 +33,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #1d2088;
+  background-color: #6565cc;
   color: white;
 }
 
@@ -54,13 +54,21 @@ body {
 }
 
 .aligning {
-    background-color:#1d2088;
+    background-color:#6565cc;
     padding-left:20%;
     padding-right:20%;
     padding-top:20px;
     padding-bottom:20px;
 }
 
+h1 {
+    padding-top:40px;
+    padding-bottom:20px;
+}
+
 @media screen and (max-width: 1000px) {
-    .aligning {padding-left: 0px; padding-right:0px; font-size:x-large}
+/*    .title-style {font-size:60px}*/
+    .aligning {padding-left: 0px; padding-right:0px; font-size:36px;}
+    .topnav a {font-size:36px;}
+    
 }
